# pocket-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: add_to_release.yml
demo_host/: Cargo.toml
demo_host/src/: main.rs
example_plugin/: Cargo.toml
example_plugin/src/: lib.rs
fake_pocket/: index.txt
host_folder/: index.txt
plugin/: Cargo.toml  build.rs  plugin.json
plugin/src/: lib.rs
