[package]
name = "demo_host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
extism = "1.21.0"
lazy_static = "1.5.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.2.1"

[dev-dependencies]
